add basic style to nav. add content to hero section

--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
     <header>
+        <div class="logo">Header logo</div>
         <ul>
-            <li>Heder Logo</li>
             <li>Heder link one</li>
             <li>Heder link two</li>
             <li>Heder link three</li>
         </ul>
     </header>
-    <hero>
-
-    </hero>
+    <div class="hero">
+        <div class="hero-text-big">This website is awesome</div>
+        <div class="hero-text-small">This website has some subtext that goes here under the main title.</div>
+        <button class="hero-button">Sign up</button>
+        <div class="hero-img"><img src="./img/pexels-sony.jpg" alt="bike on sidewalk"></div>
+    </div>
     <div class="sec1">
 
     </div>
