add section 2 imgs and text to html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
         <div class="hero-img"><img src="./img/pexels-sony.jpg" alt="bike on sidewalk"></div>
     </div>
     <div class="sec1">
-
+        <div class="title">Some random information</div>
+        <div class="row">
+            <div class="colum">
+                <img src="./img/pexels-miguel.jpg">
+                <div class="coltext">This is some subtext for subtext 1</div>
+            </div>
+            <div class="colum">
+                <img src="./img/pexels-miguel.jpg">
+                <div class="coltext">This is some subtext for subtext 2</div>
+            </div>
+            <div class="colum">
+                <img src="./img/pexels-miguel.jpg">
+                <div class="coltext">This is some subtext for subtext 3</div>
+            </div>
+            <div class="colum">
+                <img src="./img/pexels-miguel.jpg">
+                <div class="coltext">This is some subtext for subtext 4</div>
+            </div>
+        </div>
     </div>
     <div class="sec2">
         
