add section 2 content

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </div>
     </div>
     <div class="sec2">
-        
+        <div class="sec2-text">“Never let the future disturb you. You will meet it, if you have to, with the same weapons of reason which today arm you against the present.”
+            ― Marcus Aurelius, Meditations</div>
     </div>
     <div class="sec3">
         
