added sec 3 and fotter content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </header>
     <div class="hero">
-        <div class="hero-text-big">This website is awesome</div>
+        <div class="hero-title">This website is awesome</div>
         <div class="hero-text-small">This website has some subtext that goes here under the main title.</div>
         <button class="hero-button">Sign up</button>
         <div class="hero-img"><img src="./img/pexels-sony.jpg" alt="bike on sidewalk"></div>
@@ -48,10 +48,12 @@
             ― Marcus Aurelius, Meditations</div>
     </div>
     <div class="sec3">
-        
+        <div class="sec3-title">Call to action! It's time!</div>
+        <div class="sec3-text">Sign up for our product by clicking that button over there!</div>
+        <button class="callto">Sign up</button>
     </div>
     <footer>
-
+        <p>Copywright &copy; The Odin Project 2022</p>
     </footer>
 </body>
 </html>
