--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
@@ -17,13 +20,18 @@
         </ul>
     </header>
     <div class="hero">
-        <div class="hero-title">This website is awesome</div>
-        <div class="hero-text-small">This website has some subtext that goes here under the main title.</div>
-        <button class="hero-button">Sign up</button>
-        <div class="hero-img"><img src="./img/pexels-sony.jpg" alt="bike on sidewalk"></div>
+        <div class="hero-left">
+            <div class="hero-title">This website is awesome</div>
+            <div class="hero-text-small">This website has some subtext that goes here under the main title.</div>
+            <button class="hero-button">Sign up</button>
+        </div>
+        <div class="hero-right">
+            <div class="hero-img"><img src="./img/pexels-sony.jpg" alt="bike on sidewalk"></div>
+        </div>
+        
     </div>
     <div class="sec1">
-        <div class="title">Some random information</div>
+        <div class="sec1-title">Some random information</div>
         <div class="row">
             <div class="colum">
                 <img src="./img/pexels-miguel.jpg">
