basic styling to quote section, call to action section and footer

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
             ― Marcus Aurelius, Meditations</div>
     </div>
     <div class="sec3">
-        <div class="sec3-title">Call to action! It's time!</div>
-        <div class="sec3-text">Sign up for our product by clicking that button over there!</div>
-        <button class="callto">Sign up</button>
+        <div class="call-act-container">
+            <div class="sec3-title">Call to action! It's time!</div>
+            <div class="sec3-text">Sign up for our product by clicking that button over there!</div>
+            <button class="callto">Sign up</button>
+        </div>
     </div>
     <footer>
         <p>Copywright &copy; The Odin Project 2022</p>
