--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
     <header>
-        <div class="logo">Header logo</div>
-        <ul>
-            <li>Heder link one</li>
-            <li>Heder link two</li>
-            <li>Heder link three</li>
-        </ul>
+        <div class="head-con">
+            <div class="logo">Header logo</div>
+                <ul>
+                    <li>Heder link one</li>
+                    <li>Heder link two</li>
+                    <li>Heder link three</li>
+                </ul>
+            </div>
     </header>
+
     <div class="hero">
         <div class="hero-left">
             <div class="hero-title">This website is awesome</div>
             <div class="hero-text-small">This website has some subtext that goes here under the main title.</div>
-            <button class="hero-button">Sign up</button>
+            <div class="stupid"><button class="hero-button">Sign up</button></div>
         </div>
         <div class="hero-right">
             <div class="hero-img"><img src="./img/pexels-sony.jpg" alt="bike on sidewalk"></div>
@@ -53,12 +56,15 @@
     </div>
     <div class="sec2">
         <div class="sec2-text">“Never let the future disturb you. You will meet it, if you have to, with the same weapons of reason which today arm you against the present.”
-            ― Marcus Aurelius, Meditations</div>
+            <div class="quo-name">― Marcus Aurelius, Meditations</div>
+        </div>  
     </div>
     <div class="sec3">
         <div class="call-act-container">
-            <div class="sec3-title">Call to action! It's time!</div>
-            <div class="sec3-text">Sign up for our product by clicking that button over there!</div>
+            <div class="call-left">
+                <div class="sec3-title">Call to action! It's time!</div>
+                <div class="sec3-text">Sign up for our product by clicking that button over there!</div>
+            </div>
             <button class="callto">Sign up</button>
         </div>
     </div>
